Portada de noticias con flexbox

--- a/clase_7/portada.html
+++ b/clase_7/portada.html
@@ -10,13 +10,16 @@
     <nav>Barra de navegación</nav>
     
     <header>
-        <img src="https://www.silverstone.co.uk/sites/default/files/styles/article_crop/public/images/F1%20Show%20Cars%20Header%202000x817.jpg" alt="Ultimas noticias">
+        <!-- <img src="https://www.silverstone.co.uk/sites/default/files/styles/article_crop/public/images/F1%20Show%20Cars%20Header%202000x817.jpg" alt="Ultimas noticias"> -->
+        <br>
+        <br>
+        <input type="text" name="criterio" style="width: 100px; opacity: 0.75;">
     </header>
     
     <main>
         <article>
-            <h1>Título noticia 1</h1>
-            <h3>Copete</h3>
+            <h1><a class="enlace1" href="detalle.html">Título noticia 1</a></h1>
+            <h3><a class="enlace2" href="">Copete</a></h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, corporis dicta, non libero ipsa sed veniam minima sint laboriosam autem dolores molestiae modi pariatur officiis similique reprehenderit possimus, praesentium voluptates.</p>
             <button class="btn">Leer más</button>
         </article>
