--- a/clase_10/bootstrap/bootstrap.html
+++ b/clase_10/bootstrap/bootstrap.html
@@ -38,11 +38,11 @@
                 d-none: (display), oculta el elemento.
                 d-md-block, muestra el elemento a partir del breackpoint md hacia arriba.
             -->
-            <div class="col-3 text-center bg-warning d-none d-md-block">
+            <div class="col-4 text-center bg-success d-none d-md-block">
                 Menu
             </div>
 
-            <div class="col-9 p-3">
+            <div class="col-4 p-3">
                 <div class="row">
                     <div class="col-md-7 col-xs-12">
                         <div class="card">
