Header con carousel BS

--- a/clase_12/index.html
+++ b/clase_12/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -22,7 +22,7 @@
             <picture>
                 <source media="(max-width: 576px)" srcset="https://loremflickr.com/g/576/200/paris">
                 <source media="(max-width: 1200px)" srcset="https://loremflickr.com/g/1200/400/paris">
-                <img src="https://loremflickr.com/g/2000/600/paris" alt="Cabecera" style="width: 100%; height: 100%;" />
+                <img src="https://loremflickr.com/g/2000/600/paris" alt="Cabecera" style="width: 100%; height: 100%;">
             </picture>
         </header>
         
