Ejemplo header Bootstrap con carousel

--- a/clase_13/header_carousel/header_carousel.html
+++ b/clase_13/header_carousel/header_carousel.html
@@ -20,22 +20,20 @@
                 diferentes relaciones de aspecto según el dispositivo; en un móvil en vertical por ejemplo se verán mejor
                 imágenes más "cuadradas", mientras que en un SmartTV lucirán imágenes más "alargadas".
             -->
-            <header class="g-0" style="height: 25vh; overflow: hidden;">
+            <!-- El naranja de fondo permite ver el área del header respecto a la imagen -->
+            <header class="g-0" style="height: 25vh; overflow: hidden; background-color: #fc0;">
                 <div id="carouselExample" class="carousel slide h-100" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://media.formula1.com/image/upload/v1680423931/trackside-images/2023/F1_Grand_Prix_of_Australia/1478971863.jpg.transform/9col/image.jpg"
-                                style="width: 100%; max-height: 100%;">
+                            <img src="imgs/1600_250_1.jpg" style="width: 100%; max-height: 100%;">
                         </div>
 
                         <div class="carousel-item">
-                            <img src="https://media.formula1.com/image/upload/v1680429388/trackside-images/2023/F1_Grand_Prix_of_Australia/1479007711.jpg.transform/9col/image.jpg"
-                                style="width: 100%; max-height: 100%;">
+                            <img src="imgs/1600_250_2.jpg" style="width: 100%; max-height: 100%;">
                         </div>
 
                         <div class="carousel-item">
-                            <img src="https://media.formula1.com/image/upload/v1680142879/trackside-images/2023/F1_Grand_Prix_of_Australia___Previews/1477964200.jpg.transform/9col/image.jpg"
-                                style="width: 100%; max-height: 100%;">
+                            <img src="imgs/1600_250_3.jpg" style="width: 100%; max-height: 100%;">
                         </div>
                     </div>
 
@@ -52,6 +50,15 @@
                     </button>
                 </div>
             </header>
+
+            <!-- Ejemplo de etiqueta picture para manejar distintas resoluciones -->
+            <!-- <div class="row g-0">
+                <picture>
+                    <source media="(max-width: 640px)" srcset="https://picsum.photos/640/400" style="width: 100%;">
+                    <source media="(max-width: 1600px)" srcset="https://picsum.photos/1600/500" style="width: 100%;">
+                    <img src="https://picsum.photos/2500/300" style="width: 100%;">
+                </picture>
+            </div> -->
         </div>
     </div>
 
