--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,14 +11,14 @@
 
 <body>
     <main class="m-3">
-        <h1 id="resultado"></h1>
+        <h1 id="resultado">Aquí aparecerá el resultado</h1>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    
-    <script src="elementos_base.js"></script>
+     
+    <script src="condiciones.js"></script>
 </body>
 
 </html>
