Sintaxis alternativa switch

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,7 +18,7 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
      
-    <script src="condiciones.js"></script>
+    <script src="switch.js"></script>
 </body>
 
 </html>
