--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,6 +18,7 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
      
+    <!-- Llamar al archivo javascript que corresponda según la práctica que se desee realizar -->
     <script src="ronda_personas.js"></script>
 </body>
 
