Carrito precario sin matrices

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
         crossorigin="anonymous"></script>
      
     <!-- Llamar al archivo javascript que corresponda según la práctica que se desee realizar -->
-    <script src="ronda_personas.js"></script>
+    <script src="carrito_sin_matrices.js"></script>
 </body>
 
 </html>
