Ahora carrito con matrices

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -19,7 +19,7 @@
         crossorigin="anonymous"></script>
      
     <!-- Llamar al archivo javascript que corresponda según la práctica que se desee realizar -->
-    <script src="carrito_sin_matrices.js"></script>
+    <script src="carrito_con_matrices.js"></script>
 </body>
 
 </html>
