--- a/javascript/index.html
+++ b/javascript/index.html
@@ -19,7 +19,7 @@
         crossorigin="anonymous"></script>
      
     <!-- Llamar al archivo javascript que corresponda según la práctica que se desee realizar -->
-    <script src="numeros.js"></script>
+    <script src="funciones.js"></script>
 </body>
 
 </html>
