--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,7 +11,15 @@
 
 <body>
     <main class="m-3">
-        <h1 id="resultado">Aquí aparecerá el resultado</h1>
+        <h1 id="resultado" style="font-style: italic;">
+            Aquí aparecerá el resultado
+        </h1>
+        
+        <div>
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="input01" placeholder="Colocar nombre" onclick="cambiarColorInput()" style="width: 300px;">
+            <button class="btn btn-warning mt-3" onclick="mostrarValorInput()">Enviar</button>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -19,7 +27,7 @@
         crossorigin="anonymous"></script>
      
     <!-- Llamar al archivo javascript que corresponda según la práctica que se desee realizar -->
-    <script src="practica_grupal_02.js"></script>
+    <script src="calculo_superficies.js"></script>
 </body>
 
 </html>
