--- a/javascript/index.html
+++ b/javascript/index.html
@@ -27,7 +27,7 @@
         crossorigin="anonymous"></script>
      
     <!-- Llamar al archivo javascript que corresponda según la práctica que se desee realizar -->
-    <script src="calculo_superficies.js"></script>
+    <script src="./ppt.js"></script>
 </body>
 
 </html>
