--- a/clase_27/carrito.html
+++ b/clase_27/carrito.html
@@ -53,6 +53,19 @@
         </div>
     </main>
 
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="mensaje" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">CODER</strong>
+                <small>Recién</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body" style="background-color: #e1e1e1;">
+                Carrito actualizado!
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
