--- a/clase_28/carrito.html
+++ b/clase_28/carrito.html
@@ -28,7 +28,7 @@
     <main class="container-fluid" style="width: 100%;">
         <div class="row justify-content-md-center">
             <div class="col-md-8 col-xs-12 mt-4 pt-3 cuadro_general">
-                <h2 class="mb-4"><b>ROLLING CARRITO 27</b></h2>
+                <h2 class="mb-4"><b>ROLLING CARRITO</b></h2>
             </div>
         </div>
 
@@ -46,7 +46,7 @@
 
         <div class="row justify-content-md-center">
             <div class="col-md-8 col-xs-12 mt-4 pt-3 pb-3">
-                <h3 class="mb-4"><b>Productos en carrito</b></h3>
+                <h3 class="mb-4" id="titulo_pec" style="font-weight: bold;">Productos en carrito</h3>
                 <ul class="list-group" id="listado_carrito"></ul>
                 <p id="total_carrito" style="width: 100%; margin-top: 1em; text-align: right; display: none;"></p>
             </div>
@@ -60,10 +60,14 @@
                 <small>Recién</small>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
-            <div class="toast-body" style="background-color: #e1e1e1;">
+            <div id="texto_mensaje" class="toast-body" style="background-color: #e1e1e1;">
                 Carrito actualizado!
             </div>
         </div>
+    </div>
+
+    <div id="dos_por_uno" class="position-fixed bottom-0 end-0 p-3" style="display: none;">
+        <img src="img/dos_x_uno.jpg" alt="Hoy 2 x 1!" title="Hoy 2 x 1!" style="width: 300px;">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
