--- a/clase_30/login.html
+++ b/clase_30/login.html
@@ -39,6 +39,8 @@
                     </div>
         
                     <button type="submit" class="btn btn-success"><i class="fas fa-sign-in-alt"></i> Ingresar</button>
+
+                    <div id="mensaje_estado" class="alert alert-danger mt-4 invisible" style="width: 300px;">Estado</div>
                 </form>
             </div>
         </div>
